src/objects/DataLock__c.object
<CustomObject>
    <fields>
        <fullName>AppName__c</fullName>
        <label>機能名</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataLockKey__c</fullName>
        <description>機能名+&quot;_&quot;+店舗コード</description>
        <externalId>true</externalId>
        <label>ロックキー</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LockByRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ユーザ</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LockDataUserRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LockTime__c</fullName>
        <label>ロック時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShopInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>店舗情報</label>
        <referenceTo>ShopInformation__c</referenceTo>
        <relationshipLabel>データロック</relationshipLabel>
        <relationshipName>DataLockShopInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeStmp__c</fullName>
        <label>時間番号</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>データロック</label>
    <nameField>
        <displayFormat>DLK-{000000}</displayFormat>
        <label>データロック番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>